# app/Http/Controllers/UserController.php
@@ -1,0 +1,206 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use App\Http\Requests\StoreUserResquest;
+use App\Http\Requests\UpdateUserRequest;
+use App\Http\Resources\UserResource;
+use App\Interfaces\UserRepositoryInterface;
+use App\Classes\ApiResponseClass;
+use Illuminate\Support\Facades\DB;
+
+/**
+ * @OA\Tag(
+ *     name="Users",
+ *     description="API Endpoints for managing users"
+ * )
+ */
+class UserController extends Controller
+{
+    private UserRepositoryInterface $userRepositoryInterface;
+
+    public function __construct(UserRepositoryInterface $userRepositoryInterface)
+    {
+        $this->userRepositoryInterface = $userRepositoryInterface;
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/users",
+     *     summary="Get all users",
+     *     tags={"Users"},
+     *     security={{"bearerAuth": {}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Get all users",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(ref="#/components/schemas/User")
+     *         )
+     *     )
+     * )
+     */
+    public function index()
+    {
+        $data = $this->userRepositoryInterface->index();
+
+        return ApiResponseClass::sendResponse(UserResource::collection($data), '', 200);
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/users",
+     *     summary="Create a user",
+     *     tags={"Users"},
+     *     security={{"bearerAuth": {}}},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             type="object",
+     *             required={"name", "email", "password"},
+     *             @OA\Property(property="name", type="string", example="User Example"),
+     *             @OA\Property(property="email", type="string", format="email", example="email@example.com"),
+     *             @OA\Property(property="password", type="string", format="password", example="password")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="User created successfully",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="data", type="object", ref="#/components/schemas/User"),
+     *             @OA\Property(property="message", type="string", example="User created successfully")
+     *         )
+     *     )
+     * )
+     */
+    public function store(StoreUserResquest $request)
+    {
+        $details = [
+            'name' => $request->name,
+            'email' => $request->email,
+            'password' => $request->password
+        ];
+
+        DB::beginTransaction();
+        try {
+            $user = $this->userRepositoryInterface->store($details);
+
+            DB::commit();
+            return ApiResponseClass::sendResponse(new UserResource($user), 'User created successfully', 201);
+
+        } catch (\Exception $e) {
+            DB::rollBack();
+            return ApiResponseClass::rollback($e);
+        }
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/users/{id}",
+     *     summary="Get a user",
+     *     tags={"Users"},
+     *     security={{"bearerAuth": {}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="string"),
+     *         description="ID of the user"
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Get a user",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             ref="#/components/schemas/User"
+     *         )
+     *     )
+     * )
+     */
+    public function show(string $id)
+    {
+        $data = $this->userRepositoryInterface->getById($id);
+
+        return ApiResponseClass::sendResponse(new UserResource($data), '', 200);
+    }
+
+    /**
+     * @OA\Put(
+     *     path="/users/{id}",
+     *     summary="Update a user",
+     *     tags={"Users"},
+     *     security={{"bearerAuth": {}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="string"),
+     *         description="ID of the user to be updated"
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             type="object",
+     *             required={"name", "email", "password"},
+     *             @OA\Property(property="name", type="string", example="User Example"),
+     *             @OA\Property(property="email", type="string", format="email", example="email@example.com"),
+     *             @OA\Property(property="password", type="string", format="password", example="password")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="User updated successfully",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="data", type="object", ref="#/components/schemas/User"),
+     *             @OA\Property(property="message", type="string", example="User updated successfully")
+     *         )
+     *     )
+     * )
+     */
+    public function update(UpdateUserRequest $request, string $id)
+    {
+        $updateDetails = [
+            'name' => $request->name,
+            'email' => $request->email,
+            'password' => $request->password
+        ];
+
+        DB::beginTransaction();
+        try {
+            $user = $this->userRepositoryInterface->update($updateDetails, $id);
+
+            DB::commit();
+            return ApiResponseClass::sendResponse(new UserResource($user), 'User updated successfully', 200);
+
+        } catch (\Exception $e) {
+            DB::rollBack();
+            return ApiResponseClass::rollback($e);
+        }
+    }
+
+    /**
+     * @OA\Delete(
+     *     path="/users/{id}",
+     *     summary="Delete a user",
+     *     tags={"Users"},
+     *     security={{"bearerAuth": {}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="string"),
+     *         description="ID of the user to be deleted"
+     *     ),
+     *     @OA\Response(
+     *         response=204,
+     *         description="User deleted successfully"
+     *     )
+     * )
+     */
+    public function destroy(string $id)
+    {
+        $this->userRepositoryInterface->delete($id);
+
+        return ApiResponseClass::sendResponse('User deleted successfully', '', 204);
+    }
+}
